vlib/v/parser/tests/nested_unsafe_expr.vv
fn main() {
	a := 0
	unsafe {
		a += unsafe{2}
	}
	println(a)
}
